--- a/projeto-hotel-ateneu/src/main/webapp/cadastro-servico.xhtml
+++ b/projeto-hotel-ateneu/src/main/webapp/cadastro-servico.xhtml
@@ -56,7 +56,9 @@
 						<f:selectItem itemValue="Quarto" itemLabel="Quarto" />
 						<f:selectItem itemValue="Babysitter" itemLabel="Babysitter" />
 						<f:selectItem itemValue="Carro" itemLabel="Carro" />
-						<f:selectItem itemValue="Alimentação" itemLabel="Alimentação" />
+						<f:selectItem itemValue="Cafe" itemLabel="Café da Manhã" />
+						<f:selectItem itemValue="Almoco" itemLabel="Almoço" />
+						<f:selectItem itemValue="Jantar" itemLabel="Jantar" />
 					</h:selectOneMenu>
 
 
